syntax="proto3";
package proto.protoBuffProtocol;
option java_package = "protoBuffProtocol";
option java_outer_classname = "Lab4_MPP";

message Volunteer{
  string email=1;
  string password=2;
  int64 id=3;
}
message Donation{
  string idCase=1;
  string donorFirstName=2;
  string donorLastName=3;
  string address=4;
  string phone=5;
  string amountDonated=6;
}
message CharityCase{
  string caseName=1;
  float totalAmount=2;
  int64 id=3;

}

message TeledonRequest{
  enum Type {Unknown=0;Login=1;Logout=2;GetDonations=3;GetCharityCases=4;AddDonation=5;}
  // Identifies which request is filled in.
  Type type = 1;

  // One of the following will be filled in, depending on the type.
  oneof payload{
    Volunteer user = 2;
    string searchName=3;
    Donation donation=5;

  }

}
message TeledonResponse{
  enum Type {Unknown=0;Ok=1; Error=2;GetDonations=3;GetCharityCases=4;NewDonation=5;UpdateCases=6;}

  Type type=1;
  string error=2;
  repeated Donation donations=3;
  repeated CharityCase cases=4;
  repeated CharityCase cases2=6;
  Donation donation=5;
}